# my-data-agent

./: .gitignore  .pre-commit-config.yaml  README.md  _version.py  pyproject.toml  run_my_data_backend.py
cache/: documents_cache.pkl
my_data_backend/: app.py  config.py  gunicorn.conf.py  nginx.conf
my_data_backend/middlewares/: custom_middle_wares.py
my_data_backend/modules/: history_manager.py  pdf_loader.py  pinecone.py  prompt_template.py  rag_agent.py  vector_store.py  vector_store_by_clip.py
my_data_backend/routers/: router.py
my_data_backend/routers/agent/: router.py
my_data_backend/routers/agent/query/: controller.py  model.py  service.py
my_data_backend/test/: test_controller.py
my_data_backend/test/modules/: test_history_manager.py  test_rag_agent.py  test_vector_store.py
my_data_backend/utils/: env_loader.py  pinecone.py
my_data_backend/vector_store/vectorstore.faiss/: index.faiss  index.pkl
my_data_backend/vector_store/vectorstore_by_clip.faiss/: index.faiss  index.pkl
scripts/: venv.initialize.sh
