[tool.poetry]
name = "my-data-agent"
version = "0.1.0"
description = ""
authors = ["hjkim <rlafbf222@naver.com>"]
readme = "README.md"
packages = [
]
include = [
]

[tool.poetry.dependencies]
python = "^3.12"
gunicorn = ">=21.2.0, <22.0.0"
blinker = "~=1.4"
requests = ">=2.31.0, <3.0.0"
flake8 = "*"
dataclasses-json = ">=0.5.0, <0.6.0"
python-json-logger = "*"
ujson = ">=5.9.0, <5.10.0"
typing-extensions = "*"
python-dotenv = "^0.21.1"
fastapi = "^0.108.0"
uvicorn = {extras = ["standard"], version = "0.25.0"}
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
#pydantic-core = "^2.18.2"
annotated-types = "^0.7.0"
langchain = "^0.2.13"
pinecone = "^5.0.1"
langchain-community = "^0.2.12"
pypdf = "^4.3.1"
cohere = "^5.8.0"
langchain-cohere = "^0.2.2"
faiss-cpu = "^1.8.0.post1"
openai = "^1.40.6"
langchain-openai = "^0.1.21"
pillow = "^10.4.0"
transformers = "^4.44.0"
torch = "2.2.0"
python-multipart = "^0.0.9"
pytest-asyncio = "^0.23.8"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pre-commit = "*"
black = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
'''
